<resources>
    <string name="app_name">FlexFare</string>
    <string name="forum_land">Forum Login</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="driver_login">I Own a Business</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="f_name">First Name</string>
    <string name="l_name">Last Name</string>
    <string name="phone_number">Phone</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="taxis">Taxis</string>
    <string name="utilities">Utilities</string>
    <string name="new_feed">Forum</string>
    <string name="select_state">Select State</string>
    <string name="driver_name"></string>
    <string name="driver_no"></string>
    <string name="driver_plate"></string>
    <string name="location"></string>
    <string name="empty_check">Empty check</string>
    <string name="email_check">Email check</string>
    <string name="digit_check">Digit check</string>
    <string name="value_check">Value check</string>
    <string name="no_check">No check</string>
    <string name="auto_complete">Auto Complete. Type ca.</string>
    <string name="distance">Distance: </string>
    <string name="km">0 km</string>
    <string name="time">Time: </string>
    <string name="mins">0 mins</string>
    <string name="find_dir">Find Direction</string>
    <string name="destination">Your Destination</string>
    <string name="user_location">Your Location</string>
    <string name="error_message_empty">Please fill this field</string>
    <string name="error_message_email">Please input valid email</string>
    <string name="error_message_digit">Please input digit only</string>
    <string name="error_message_value">Please input value between -100 and 100</string>
    <string name="error_message_phone_no">Phone number must contain only 11 digits.</string>
    <string name="error_message_account">Account should be 6&#8211;12 chars</string>
    <string name="error_message_password">No special characters are allowed and length must be in 6&#8211;12 chars</string>
    <string name="first_name">First Name</string>
    <string name="car_plate">Car Reg. Number</string>
    <string name="account_name">Account Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_internet">Internet not detected!</string>
    <string name="select_img">Profile Photo</string>
    <string name="uploading">Uploading....</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="menu_item_call">Call</string>
    <string name="menu_item_text">Text</string>
    <string name="menu_item_email">Email</string>
    <string name="title_activity_spot_me">SpotMe</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="username">Username</string>
    <string name="repeat_pwd">Repeat Password</string>
    <string name="c_code">+234</string>
    <string name="yes_acct">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="signingup">BY SIGNING UP</string>
    <string name="agreement">You agree to the terms of use and service</string>
    <string name="email">Enter email</string>
    <string name="password">Password</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="no_acct">Don\'t have an account?</string>
    <string name="my_profile">Update Profile</string>
    <string name="profile">Profile</string>
    <string name="full_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="premium">Premium</string>
    <string name="premium_active">Active</string>
    <string name="car_type">Car Type</string>
    <string name="reg_no">Reg. No</string>
    <string name="phone_no">Phone Number</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="your_name"></string>
    <string name="plate_no"></string>
    <string name="plate">Plate No:</string>
    <string name="phone"></string>
    <string name="idrive">I Drive</string>
    <string name="myroute">My Route</string>
    <string name="own">My Car</string>
    <string name="detail">Description</string>
    <string name="car">Toyota Camry</string>
    <string name="verify_details">Verify Details</string>
    <string name="edit_header">Edit Header Image</string>
    <string name="welcome">Welcome to FlexFare</string>
    <string name="intro">FlexFare offers awesome flexibility in maximising your earnings from behind the wheels</string>
    <string name="connect">Flexible Connect</string>
    <string name="connect_detail">Connect freely with the entire network of people who need a ride</string>
    <string name="charges">Flexible Charges</string>
    <string name="charges_details">Spend less on rides, save more, pay once at a time.</string>
    <string name="finish">Finish</string>
    <string name="vroom">Vrooommmm&#8230;</string>
    <string name="news_feed">Forum</string>
    <string name="driver_detail">My Profile</string>
    <string name="loc">Point Me</string>
    <string name="route">Find Route</string>
    <string name="about">About</string>
    <string name="acct_info">Update Profile</string>
    <string name="others">Others</string>
    <string name="menu_item_share">Share</string>
    <string name="menu_item_send">Send</string>
    <string name="vector_path_menu">M3,8 L21,8 21,6 3,6z M3,18 L21,18 21,16 3,16z M3,13 L21,13 21,11 3,11z</string>
    <string name="vector_path_line">M3,13 L21,13 21,11 3,11z M3,13 L21,13 21,11 3,11z M3,12 L21,12 21,12 3,12z</string>
    <string name="vector_path_close">M5,6.41 L17.59,19 19,17.59 6.41,5z M6.41,19 L19,6.41 17.59,5 5,17.59z M12,12 L12,12 12,12 12,12z</string>
    <string name="latest">What is the latest?</string>
    <string name="delete_status">Delete Status</string>
    <string name="label_create_post_activity">Create post</string>
    <string name="label_post_detail_activity">Post detail</string>
    <string name="label_image_detail_activity">Image</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_create_profile">Create profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="title_activity_edit_post">Edit post</string>
    <string name="text_take_photo">Take photo</string>
    <string name="text_pick_photo">Pick from Gallery</string>
    <string name="button_title_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="message_post_was_created">Post was created</string>
    <string name="error_fail_create_post">Fail to create post</string>
    <string name="error_fail_load_image">Fail to load image</string>
    <string name="error_fail_crop_image">Fail to crop image</string>
    <string name="error_smaller_image">Image is too small. Required image size 100x100 px</string>
    <string name="error_incorrect_file_type">Incorrect file type</string>
    <string name="error_bigger_file">File size is bigger than 10Mb</string>
    <string name="message_creating_post">Creating post ..</string>
    <string name="message_saving">Saving ..</string>
    <string name="warning_empty_image">Image is required</string>
    <string name="warning_empty_title">Title is required</string>
    <string name="warning_empty_description">Description is required</string>
    <string name="error_post_title_length">Max length of the title should be less than 255 symbols</string>
    <string name="error_fail_remove_post">Fail to remove post</string>
    <string name="message_post_was_removed">Post was removed</string>
    <string name="error_fail_update_post">Fail to update post</string>
    <string name="error_post_was_removed">Post was removed</string>
    <string name="confirm_deletion_post">Delete this post?</string>
    <string name="comment_text_hint">Enter your comment…</string>
    <string name="button_post_comment">Post comment</string>
    <string name="label_comments">Comments (%1$d):</string>
    <string name="create_post_menu_label">Post</string>
    <string name="create_post_full_menu_label">Create post</string>
    <string name="sign_out_menu_label">Sign out</string>
    <string name="edit_profile_menu_label">Edit profile</string>
    <string name="button_title_save">Done</string>
    <string name="button_title_continue">Continue</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="action_create_profile">Continue</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_profile_name_length">Max length of the name should be less than 120 symbols</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_confirm_password">Wrong password confirmation</string>
    <string name="action_sign_in">Sign in</string>
    <string name="permissions_not_granted">Cancelling, required permissions are not granted</string>
    <string name="error_fail_create_profile">Fail to create profile</string>
    <string name="error_fail_update_profile">Fail to update profile</string>
    <string name="text_login">Thank you for using our application! Please, sign in for continue your action.</string>
    <string name="error_authentication">Authentication failed.</string>
    <string name="error_google_play_services">Google Play Services error.</string>
    <string name="button_login_with_facebook">Login with facebook</string>
    <string name="button_login_with_google">Login with google</string>
    <string name="loading">Loading...</string>
    <string name="removing">Removing...</string>
    <string name="error_general">Somthing went wrong.</string>
    <string name="error_general_post">Somthing went wrong with post, id: %1$s</string>
    <string name="internet_connection_failed">No internet connection</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="profile_menu_item">Profile</string>
    <string name="collapse_text_label">show less</string>
    <string name="expand_text_label">show more</string>
    <string name="add_complain">Complain</string>
    <string name="edit_post_menu">Edit post</string>
    <string name="delete_post_menu">Delete post</string>
    <string name="complain_text">You can complain to this post if it contains violence,
        bullying and threats, hate speech, tragic events and sexually explicit contents.
        Nobody will see the post if you complain to it. You can\'t delete your complain.</string>
    <string name="send_comment_button_label">Send</string>
    <string name="posted_by_label">Posted by:</string>
    <plurals name="posts_counter_format">
        <item quantity="one">post</item>
        <item quantity="other">posts</item>
    </plurals>
    <plurals name="likes_counter_format">
        <item quantity="one">like</item>
        <item quantity="other">likes</item>
    </plurals>
</resources>