<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.flexfare.android.activities.MapsFinder">

    <AutoCompleteTextView
        android:id="@+id/etOrigin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_location" />

    <AutoCompleteTextView
        android:id="@+id/etDestination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnFindPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/FindPlace"
            android:text="@string/find_dir" />
        <TextView
            android:id="@+id/tv_dist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnFindPath"
            android:layout_toEndOf="@id/btnFindPath"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/distance"
            />

        <TextView
            android:id="@+id/tvDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_dist"
            android:layout_toEndOf="@id/tv_dist"
            android:layout_marginTop="2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/km" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_below="@+id/tv_dist"
            android:layout_toRightOf="@id/btnFindPath"
            android:layout_toEndOf="@id/btnFindPath"
            android:text="@string/time"
            />

        <TextView
            android:id="@+id/tvDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tv_time"
            android:layout_toEndOf="@id/tv_time"
            android:layout_below="@+id/tvDistance"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/mins" />
    </RelativeLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
