<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/main_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_animation_list"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="bold"
            android:layout_marginTop="70dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_below="@id/name"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp">
            <EditText
                android:id="@+id/login_em"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:textColorHint="@color/white"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="35dp"
            android:layout_marginStart="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginEnd="35dp">
            <EditText
                android:id="@+id/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColorHint="@color/white" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_btn"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:layout_below="@+id/pass"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/fgt_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pass"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@null"
            android:layout_below="@id/sign_btn"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/no_acct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_acct"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/fgt_pass"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/signUp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginTop="15dp"
            android:background="@drawable/ic_button"
            android:textColor="@color/white"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/no_acct"/>
    </RelativeLayout>
</ScrollView>