<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/regScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_animation_list">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:textColorHint="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginStart="@dimen/left_start"
        android:layout_marginLeft="@dimen/left_start"
        android:layout_marginEnd="@dimen/right_end"
        android:layout_marginRight="@dimen/right_end">
        <EditText
            android:id="@+id/f_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textPersonName|textCapWords"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/full_name"
        android:textColorHint="@color/white"
        android:layout_marginStart="@dimen/left_start"
        android:layout_marginLeft="@dimen/left_start"
        android:layout_marginRight="@dimen/right_end"
        android:layout_marginEnd="@dimen/right_end">
        <EditText
            android:id="@+id/l_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="textPersonName|textCapWords"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#f0f7f4"
        android:id="@id/username"
        android:layout_below="@id/last_name"
        android:layout_marginStart="@dimen/left_start"
        android:layout_marginLeft="@dimen/left_start"
        android:layout_marginRight="@dimen/right_end"
        android:layout_marginEnd="@dimen/right_end">
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textCapWords"
            android:textColor="#f0f7f4"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/e_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:layout_below="@id/username"
        android:layout_marginStart="@dimen/left_start"
        android:layout_marginLeft="@dimen/left_start"
        android:layout_marginRight="@dimen/right_end"
        android:layout_marginEnd="@dimen/right_end">
        <EditText
            android:id="@+id/signup_em"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/e_mail"
        android:textColorHint="@color/white"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="@dimen/left_start"
        android:layout_marginLeft="@dimen/left_start"
        android:layout_marginRight="@dimen/right_end"
        android:layout_marginEnd="@dimen/right_end">
        <EditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/et_repeatpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#f0f7f4"
        android:layout_below="@id/pass"
        app:passwordToggleEnabled="true"
        android:layout_marginStart="@dimen/left_start"
        android:layout_marginLeft="@dimen/left_start"
        android:layout_marginRight="@dimen/right_end"
        android:layout_marginEnd="@dimen/right_end">
        <EditText
            android:id="@+id/et_repeatpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_pwd"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/c_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_repeatpwd"
        android:layout_marginStart="@dimen/left_start"
        android:layout_marginLeft="@dimen/left_start"
        android:layout_marginRight="@dimen/right_end"
        android:layout_marginEnd="@dimen/right_end">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".15"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/c_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="phone"
                android:text="@string/c_code"
                android:textColor="#f0f7f4"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_weight=".55"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:inputType="phone"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@+id/c_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="?colorAccent"/>

    <Button
        android:id="@+id/fgt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/forgot_pass"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_below="@id/signup_btn"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/no_acct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes_acct"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/fgt_pass"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="15dp"
        android:background="@drawable/ic_button"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/no_acct"
        android:layout_marginBottom="20dp"/>
</RelativeLayout>
</ScrollView>